Fix - Reduce navbar icons jumping when old navbar position.

--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -519,6 +519,9 @@ div.dropdown-menu > ul {
             left: 32px;
         }
     }
+    .loggedin #essentialnavbar.oldnavbar.affix .navbar .navbar-inner .custommenus .usermenu ul.nav .dropdown > .dropdown-toggle {
+        min-width: 100px;
+    }
 }
 
 /* @end */
